--- a/css/styles.css
+++ b/css/styles.css
@@ -138,13 +138,14 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 100px;
   background-color: #3397DB;
   align-items: center;
   padding-top: 20px;
+  padding-left: 5px;
 }
 .filter-results {
   display: flex;
+  flex-direction: column;
 }
 .filter-options h2 {
   color: white;
@@ -173,6 +174,8 @@ nav h1 a {
   margin: 0 auto;
   text-align: center;
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -189,7 +192,8 @@ nav h1 a {
   margin: 0 auto;
   max-width: 100%;
   min-height: 248px;
-  min-width: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 #restaurants-list li h2 {
   color: #f18200;
@@ -312,6 +316,31 @@ nav h1 a {
 @media only screen and (min-width: 400px) {
   nav h1 {
     padding-top: 25px;
+  }
+}
+
+@media only screen and (min-width: 450px) {
+  .filter-results {
+    flex-direction: row;
+  }
+  #restaurants-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  #restaurants-list li {
+    flex: 1 1 50%;
+  }
+}
+
+@media only screen and (min-width: 750px) {
+  #restaurants-list:after {
+    content: '';
+    flex: auto;
+    justify-content: space-around;
+  }
+  #restaurants-list li {
+    flex: 1 1 calc(100% / 3);
+    max-width: calc(100% / 3);
   }
 }
 
